Finito lo styling di highlight + risolto il bug dell'overflow del testo

--- a/src/stile/HighlightHome.css
+++ b/src/stile/HighlightHome.css
@@ -7,21 +7,25 @@
     overflow-y: scroll;
     background-color: #ffffff00;
 
-    width: 75%;
+    width: 80%;
     height: 120vh;
 
     padding: 3%;
     gap: 15%;
+
+    scrollbar-width: none;
 }
 
 .Highlight {
     display: flex;
-    width: 75%;
+    width: 80%;
     height: 38vh;
     flex-direction: row;
     gap: 3%;
 
     padding: 3% 3%;
+
+    border-radius: 10px;
 
     background-color: rgb(73, 73, 73);
 }
@@ -36,6 +40,8 @@
 
     text-align: justify;
 
+    border-radius: 5px;
+
     outline: 2px solid rgb(42, 42, 42);
     outline-offset: 5px;
     width: 65%;
@@ -45,6 +51,8 @@
     display: flex;
     flex-direction: column;
 
+    border-radius: 5px;
+
     border: 2px solid black;
     width: 35%;
 
@@ -52,7 +60,7 @@
 
 .Highlight #testo #Titolo {
     color: white;
-    font-size: clamp(16px, 3vw, 50px);
+    font-size: clamp(16px, 2.4vw, 50px);
     font-family: 'HeaderBlog';
     font-weight: 900;
     white-space: nowrap;
@@ -65,7 +73,13 @@
     color: white;
     font-size: 1rem;
     font-family: 'TestoBlog';
-
+    max-height: 65%;
+    min-height: 65%;
+    position: relative;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 9;
+    -webkit-box-orient: vertical;
     
 }
 
@@ -78,21 +92,21 @@
 
     color: rgb(135, 135, 135);
     font-family: "TestoBlog";
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 .Highlight #testo #Leggi {
     text-align: center;
 
-    background-color: aliceblue;
-    border: solid #000000;
-    outline: ;
+    background-color: rgb(73, 73, 73);
+    border: 2px solid rgb(42, 42, 42);
+    border-radius: 5px;
 
     position: absolute;
     padding: 3%;
-    bottom: -10%;
-    width: 30%;
-    left: 60%;
+    bottom: -8%;
+    width: 20%;
+    left: 67%;
 }
 
 .Highlight #testo #Leggi p {
@@ -101,6 +115,7 @@
 
     font-size: large;
     text-decoration: none;
+    color: rgb(216, 216, 216);
 }
 
 .Highlight #immagine.Immagine {
@@ -113,7 +128,4 @@
     background-color: green;
     margin: 2%;
 }
-
-
-
 
